--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ yarn-error.log*
 next-env.d.ts
 
 # Local data
-data/
-models/
-docker/data/
-docker/models/
+/data
+/models/
+/docker/data/
+/docker/models/
